tests/test018.err
error: test018.tig:2:1: wrong number of arguments: expected 1, got 2
