tests/test018.tig
/* ERR: wrong arity */
printi(42, 56)
